--- a/android-project/app/src/main/res/values/strings.xml
+++ b/android-project/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">demofirebasedistribution</string>
+    <string name="text_hello">Hello</string>
 </resources>
